# keyboard_driver_sk80

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.txt  setup.bat  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml  upload-release-workflow.yml  upload-release-workflow.yml.disabled  windows.yml
benchmark/: rk84_benchmark.cpp
docs/: env_setup_and_building.md
include/: blink.h  keyboard.h  messages_data.h  print.h  usb_functions.h
include/main/: blink.h  cycle_keyids.h  keyboard.h  messages.h  messages_data.h  messages_rk84.h  messages_sk80.h  misc.h  print.h  push_to_light.h  test_load_blink.h  usb_functions.h
include/main/keyboards/: abstract_keyboard.h  keyboard_base.h  keyboard_spec_factory.h  known_keyboards.h
include/main/keyboards/rk84/: constants_rk84.h  key_mappings_rk84.h  messages_rk84.h  rk84.h
include/main/keyboards/sk80/: constants_sk80.h  key_mappings_sk80.h  messages_sk80.h  sk80.h
src/: choose_keyboard.cpp  cycle_keyids.cpp  keyboard.cpp  main.cpp  messages.cpp  push_to_light.cpp  test_load_blink.cpp  usb_functions.cpp
src/blink/: blink.cpp  keyboard.cpp  messages.cpp  messages_rk84.cpp  messages_sk80.cpp  print.cpp  usb_functions.cpp
src/blink/keyboards/: keyboard_factory.cpp  keyboard_spec_factory.cpp  known_keyboards.cpp
src/blink/keyboards/rk84/: messages_rk84.cpp  rk84.cpp
src/blink/keyboards/sk80/: messages_sk80.cpp  sk80.cpp
src/demo/: blink_loader.cpp  blink_loader.h  choose_activity.cpp  choose_activity.h  choose_keyboard.cpp  choose_keyboard.h  cycle_keyids.cpp  cycle_keyids.h  main.cpp  push_to_light.cpp  util.cpp  util.h
src/demo/activities/: cycle_keyids.cpp  cycle_keyids.h  push_to_light.cpp  push_to_light.h  test_single_key.cpp  test_single_key.h
test/: keyboard_rk84_test.cpp  keyboard_sk80_test.cpp  keyboard_test.cpp
